aura-modules/src/test/modules/invalidmodule/examples-noname/examples-noname.js
import { Element } from 'engine';

export default class ExamplesNoName extends Element {} 